--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,28 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #6272a4;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: #8be9fd;
+}
+
 body {
     height: 100vh;
     background: #282a36;
     color: #f8f8f2;
     font-family:Verdana, Tahoma, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
